--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "luxon": "^3.3.0",
     "winston": "^3.3.3"
   }
 }
