--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "luxon": "^3.3.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "winston": "^3.3.3"
   }
 }
