--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "bot.js",
   "author": "Tturna",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "NODE_ENV=test jest",
+    "start:test": "NODE_ENV=test node bot.js"
   },
   "dependencies": {
     "discord.js": "^14.11.0",
@@ -17,6 +19,9 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^27.9.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
