--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -2,10 +2,11 @@ name: Deployment Pipeline
 
 on:
   pull_request:
-    branches: [feature]
+    branches: [main]
+    types: [opened, synchronize]
   
   push:
-    branches: [main]
+    branches: [main, feature]
 
 jobs:
   validate-code:
@@ -26,8 +27,8 @@ jobs:
         run: 'npm run test'
   
   update-version-and-notify:
-    # run the job only if the branch is 'main'
-    if: github.ref == 'refs/heads/main'
+    # run this job only if pushing (or merging) to main
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: [validate-code]
     steps:
@@ -45,11 +46,11 @@ jobs:
         with:
             severity: error
             description: |
+              # Deploy Failed!
               **Event:** ${{ github.event_name }}
               **Repo:** [${{ github.repository }}](https://github.com/${{ github.repository }})
               **Job:** ${{ github.job }}
               **Commit:** [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
-            details: Deploy Failed!
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: Notify Success Discord
@@ -57,6 +58,7 @@ jobs:
         if: success()
         with:
             severity: info
-            description: 'Testing: ${{ github.event.commits.*.id }}'
-            details: Deploy Succeeded!
+            description: |
+              # Deploy Succeeded!
+              **Repo:** [${{ github.repository }}](https://github.com/${{ github.repository }})
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
