--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "NODE_ENV=test jest",
-    "start:test": "NODE_ENV=test node bot.js"
+    "start:test": "NODE_ENV=test node bot.js",
+    "deploy-commands": "node utils/deploy-commands.js"
   },
   "dependencies": {
     "discord.js": "^14.11.0",
